Changelog
=========


Version 1.3.1 (in development)
------------------------------

Fix default root (change from . to ./glottolog/ as documented).

Extend test coverage.


Version 1.3
-----------

Add ``treedb.write_json_lines()``.

Use ``lang=None`` outside of the database (checksum change).


Version 1.2
-----------

Normalize providers and sites into lookup tables.

Fix exception when config file is not found.

Improve logging: log sqlite3.Connection to identify in-memory databases,
debug log package location.

Improve tests.


Version 1.1
-----------

Fix some aggregation orders in ``get_json_query()`` that depended on the
insertion order.

Fix ```get_query()`` link markup. Use the same aggregation order as
``get_json_query``.

Fixed ``treedb.iterdescendants()`` to include roots with no descencants.

Improve ``treedb.print_languoid_stats()`` performance and the query used for
the ``stats`` view.

Reduce file size adding WITHOUT ROWID to tables with non-integer or composite
primary keys.

Stabilize ``treedb.print_query_sql()`` notebook output with ``flush=True``.

Change __dataset__ and __producer__ primary key from BOOLEAN to INTEGER.

Use ``sqlite.sqlite_version`` instead of querying the engine.


Version 1.0
-----------

Build with Glottolog ``v4.2.1`` per default.

Improve ``treedb.print_schema()`` output for views.

Improve tests and logging.


Version 0.11
------------

Add support for the new optional core `timespan` field.

Add new test flags: --glottolog-repo-root and --force-rebuild.

Extend tests and integrate with Travis and Codevov.


Version 0.10
------------

Insert languoids in ``id`` order if possible.

Gzip dump-like csv files per default (bump csv23 to 0.3+).

Change default name of ``treedb.write_csv`` to ``treedb.query.csv```.

Register ``pandas`` as optional dependency.

Fix xenial compat. Fix Python 3.6 compat.

Fix re-load with ``exclude_raw``.

Improve logging.

Increase test coverage. Log ``sqlite_version()``.


Version 0.9