@@ -7,6 +7,8 @@ Version 1.3.1 (in development)
 
 Fix default root (change from . to ./glottolog/ as documented).
 
+Fix ``treedb.write_json_lines()`` under Python 3.6 when passed a file object.
+
 Extend test coverage.
 
 
